--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,7 @@
+/* stylelint-disable at-rule-no-unknown */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --color-primary-rgb: 100, 116, 139;
