--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -57,7 +57,7 @@
 .group:hover .group-hover\:text-theme-primary { color: rgb(var(--color-primary-rgb)); }
 
 ::selection {
-  background-color: rgb(var(--color-primary-rgb) / 0.25);
+  background-color: #3390ff;
   color: #ffffff;
 }
 
